# OpenVS-CLI

./: .env  .gitignore  .npmignore  CHANGELOG.md  README.md  api.py  cli.py  package.json  pyproject.toml  requirements.txt
agents/: coder.py  critic.py  planner.py
core/: actor_protocol.py  consensus.py  delegation_graph.py  distributed_workers.py  event_bus.py  event_store.py  guard.py  jobs.py  key_manager.py  merge_engine.py  model_client.py  model_fallback.py  model_registry.py  models.py  orchestrator.py  policy_engine.py  queue_manager.py  scheduler.py  state_machine.py  swarm_coordinator.py  task_router.py  tracer.py  transactions.py  watchdog.py  workers.py
engine/: bridge.py  command_handler.py  errors.py  executor.py  hooks.py  jobs.py  lifecycle.py  main.py  model_client.py  observability.py  orchestrator.py  sandbox.py  security.py  stream.py
engine/commands/: builtin.py  registry.py
engine/distributed/: __init__.py  coordinator.py  core.py  network.py
engine/events/: __init__.py  _bus.py  replay.py  store.py
engine/plugins/: runtime.py  schema.py
memory/: memory.py
memory_store/: events.jsonl  job_queue.json
npm-wrap/: .npmignore  LICENSE  package.json
npm-wrap/src/: config.js  doctor.js  (+1 more)
openvs/: __init__.py  __main__.py
openvs_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: postinstall-doctor.cjs  preinstall-check.cjs  prepublish-check.cjs
src/: index.js
tests/: test_golden_flows.py  test_guard.py  test_scheduler.py  test_swarm.py
tools/: registry.py
workspace/: main.py
(+80 files in other folders)
