[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openvs-cli"
version = "1.0.0"
description = "OpenVS CLI — AI Operating System Terminal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.40",
    "rich>=13.0",
    "httpx>=0.24",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "faiss-cpu>=1.7",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "pytest>=7.0",
]

[project.scripts]
openvs = "openvs.__main__:run"

[tool.setuptools.packages.find]
include = ["openvs*", "core*", "agents*", "tools*", "memory*"]
